<resources>
    <string name="app_name">Hosteria Ruta del Valle</string>

    <!--login -->
    <string name="title">Bienvenido</string>
    <string name="subititle">Hostería Ruta del Valle</string>
    <string name="placeholder_user">Usuario</string>
    <string name="placeholder_pass">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Crear Cuenta</string>

    <!-- Register -->
    <string name="title_re">Crear Cuenta</string>
    <string name="ph_DNI">No.Cédula</string>
    <string name="ph_nombre">Nombre</string>
    <string name="ph_email">Email</string>
    <string name="ph_telefono">Teléfono</string>
    <string name="ph_username">Nombre de Usuario</string>
    <string name="ph_password">Contraseña</string>
    <string name="bt_signup">Registrarse</string>
    <string name="start_message">¡Empecemos!</string>
    <string name="alreadyaccount">¿Ya posee una cuenta?</string>
    <string name="message_register">Crea una cuenta para acceder a nuestro servicios</string>


    <!-- NavigationDrawer -->
    <string name="header">Ruta Del Valle</string>
    <string name="close">close</string>
    <string name="open">open</string>

    <!-- Main Fragment -->
    <string name="mainFragmentTitle">Habitaciones</string>

    <!-- Services -->
    <string name="titleServices">Servicios</string>
    <string name="Comida">Comidas</string>
    <string name="Piscina">Piscina</string>
    <string name="Espacios">Espacio deportivo</string>
    <string name="Estacionamiento">Parqueadero</string>
    <string name="Recepcion">Recepcion</string>
    <string name="Limpieza">Limpieza</string>
    <string name="General">General</string>
    <string name="ComidasRes">Dispone de diferentes consumible, cuenta con desayuno, almuerzo, y merienda, además de una variedad de bebidas y refrescos</string>
    <string name="PiscinaRes">Cuenta con una piscina, se mantiene abierta todo el día</string>
    <string name="EspaciosRes">Tiene canchas para jugar Futbol y Volley</string>
    <string name="EstacionamientoRes">Estacionamiento unicamente para clientes, cuenta con vigilancia</string>
    <string name="RecepcionRes">Servicio de recepción todo el día y consulta de información</string>
    <string name="LimpiezaRes">La limpieza se realiza de forma díaria</string>
    <string name="GeneralRes">Habitaciones espaciosas y comodas, servicio al cuarto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Fragment Detalle de la Habitación -->
    <string name="tagDetalle">Detalles de la habitación</string>
    <string name="tagCosto">Costo/Noche</string>
    <string name="buttonReservarAhora">Reservar Ahora</string>
    <string name="tagPlanta">Planta:</string>
    <string name="tagMax_adultos">Max Adultos:</string>
    <string name="tagMax_ninos">Max Niños:</string>

    <!-- Profile Fragment -->
    <string name="btnEditar">Editar Perfil</string>

    <!-- Fragment Reserva -->
    <string name="tagNroHabitacion">Habitación Nº</string>
    <string name="tagTipoHabitacion">Tipo Habitación</string>
    <string name="tagPrecioNoche">Precio/n.</string>
    <string name="tagDetalleReserva">Detalles</string>
    <string name="tagEntrada">Entrada</string>
    <string name="tagSalida">Salida</string>
    <!--<string name="hintMaxAdultos">Num. adultos</string>
    <string name="hintMaxNinos">Num. niños</string>-->
    <string name="defvalueAdultos">1</string>
    <string name="defvalueNinos">0</string>
    <string name="tagAdultos">Adultos:</string>
    <string name="tagNinos">Niños:</string>
    <string name="btnCalendar">Calendario</string>
    <string name="btConfirmarReserva">Confirmar Reserva</string>
    <string name="tagFechaEntrada">Fecha Entrada</string>
    <string name="tagFechaSalida">Fecha Salida</string>
    <string name="tagTotalPago">Pago Total:</string>
    <string name="phTvTotalPago">$0.00</string>

    <!-- Fragment Mis Reservas -->
    <string name="titleMisReservas">Reservas Realizadas</string>
    <string name="tagHabitacionReservada">Habitación:</string>
    <string name="tagPersonas">Personas:</string>
    <string name="tagIngresoReserva">Ingreso:</string>
    <string name="tagSalidaReserva">Salida:</string>
    <string name="tagCostoTotal">Costo:</string>
</resources>