<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="35dp">



        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/start_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="44dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_register"
            android:textColor="#d6d3d4"
            android:textAlignment="center"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/editTextDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/ph_DNI"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp"
                />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/ph_nombre"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp"
                />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/ph_email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp" />
            <EditText
                android:id="@+id/editTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/ph_telefono"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp" />
            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/ph_username"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp" />
            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/ph_password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:backgroundTint="#FD6C88"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/bt_signup"
                android:textSize="12dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/alreadyaccount"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:textColor="#d6d3d4"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:onClick="pantallaLogin"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>