<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="68dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_hotel_logo"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro_bold"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="44dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/subititle"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/source_sans_pro_semibold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="50dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/placeholder_user"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp"
                />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/field_border"
                android:ems="10"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/placeholder_pass"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/input"
                android:textColorHint="@color/input"
                android:textSize="16dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:backgroundTint="#FD6C88"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/login"
                android:textSize="12dp"
                android:onClick="ingresar"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:background="@color/white"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="#223065"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="o"
                        android:textColor="@color/white"/>

                </FrameLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:backgroundTint="#F3A2B1"
                android:fontFamily="@font/source_sans_pro_bold"
                android:text="@string/register"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:onClick="crearCuenta"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>