<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ReservaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_hotel"
                android:layout_marginRight="15dp"
                />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subititle"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:textSize="18sp"
                android:textColor="@color/input"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagNroHabitacion"
            android:textSize="16sp"
            android:fontFamily="@font/source_sans_pro_regular"/>

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagTipoHabitacion"
            android:textSize="16sp"
            android:fontFamily="@font/source_sans_pro_regular"/>

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagPrecioNoche"
            android:textSize="16sp"
            android:fontFamily="@font/source_sans_pro_regular"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:padding="15dp">
        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="500dp"
            android:layout_height="400dp"
            android:visibility="gone"
            android:headerBackground="@color/input"
            />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagDetalleReserva"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:textSize="18sp"
            android:textColor="@color/input"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/tagEntrada"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@drawable/field_border"
                        android:ems="10"
                        android:fontFamily="@font/source_sans_pro_semibold"
                        android:inputType="date"
                        android:minHeight="48dp"
                        android:padding="10dp" />

                    <ImageButton
                        android:id="@+id/imageButtonDate1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/btnCalendar"
                        android:minWidth="48dp"
                        android:src="@drawable/ic_calendar"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:text="@string/tagSalida"
                    android:textAllCaps="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextDate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:background="@drawable/field_border"
                        android:ems="10"
                        android:minHeight="48dp"
                        android:fontFamily="@font/source_sans_pro_semibold"
                        android:inputType="date"
                        android:padding="10dp" />

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:contentDescription="@string/btnCalendar"
                        android:src="@drawable/ic_calendar"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:textSize="16sp"
                android:textColor="@color/input"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/field_border"
                android:ems="10"
                android:hint="@string/hintMaxAdultos"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="16sp"
                android:fontFamily="@font/source_sans_pro_regular"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:fontFamily="@font/source_sans_pro_semibold"
                android:textSize="16sp"
                android:textColor="@color/input"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:background="@drawable/field_border"
                android:ems="10"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="16sp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/hintMaxNinos"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>